--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-*.aux
-*.fdb_latexmk
-*.fls
-*.log
-*.loa
-*.out
-*.synctex.gz
-*.glg
-*.glo
-*.gls
-*.ist
-*.toc
-*.xdy
-*.pdf
-!notes.pdf
-*.1
+notes/*
+!notes/*.jpg
+!notes/*.tex
+!notes/notes.pdf
+code/*/build
+.vscode
+
